--- a/i18n/de-DE/general.json
+++ b/i18n/de-DE/general.json
@@ -1,5 +1,6 @@
 {
   "backToHomepage": "Zurück zur Startseite",
+  "startNow":  "Jetzt starten", 
   "home": "Startseite",
   "error": "Fehler",
   "close": "Schließen",
