--- a/i18n/en-GB/general.json
+++ b/i18n/en-GB/general.json
@@ -1,5 +1,6 @@
 {
   "backToHomepage": "Back to homepage",
+  "startNow":  "Jetzt starten", 
   "home": "Home",
   "error": "Error",
   "close": "Close",
