--- a/i18n/pl-PL/general.json
+++ b/i18n/pl-PL/general.json
@@ -1,5 +1,6 @@
 {
   "backToHomepage": "Powrót na stronę główną",
+  "startNow":  "Jetzt starten", 
   "home": "Strona główna",
   "error": "Błąd",
   "close": "Zamknij",
