--- a/i18n/de-DE/checkout.json
+++ b/i18n/de-DE/checkout.json
@@ -10,12 +10,12 @@
     "close": "Panel schließen",
     "logOut": "Hier können Sie sich abmelden",
     "orderTotal": "Gesamtbestellwert",
-    "loginRequired": "Sie müssen angemeldet sein, um eine Bestellung aufzugeben.",
+    "loginRequired": "Sie müssen eine Adresse eingeben, um eine Bestellung aufzugeben.",
     "goToHomepage": "Zur Startseite gehen",
     "here": "hier",
     "shippingEstimate": "Versandkostenabschätzung",
     "selectPaymentMethod": "Wählen Sie eine Zahlungsmethode aus",
-    "notCreateAccount": "Kein Kundenkonto erstellen.",
+    "notCreateAccount": "Gastbestellung tätigen",
     "takesUpTo": "Dauert bis zu",
     "subtotal": "Zwischensumme",
     "taxesLabel": "Versandkosten und Steuern werden beim Checkout berechnet.",
@@ -39,7 +39,7 @@
     "selectBillingAddress": "Wählen Sie eine Rechnungsadresse aus",
     "addNewBillingAddress": "Neue Rechnungsadresse hinzufügen",
     "addNewShippingAddress": "Neue Lieferadresse hinzufügen",
-    "differentBillingAddress": "Unterschiedliche Rechnungsadresse",
+    "differentBillingAddress": "Unterschiedliche Lieferadresse",
     "paymentMethodLabel": "Zahlungsmethode",
     "shippingMethodLabel": "Versandmethode",
     "shippingPriceLabel": "Versandkosten",
