--- a/i18n/de-DE/form.json
+++ b/i18n/de-DE/form.json
@@ -25,7 +25,7 @@
     "submit": "Senden",
     "promoCodePlaceholder": "Promo-Code eingeben",
     "searchPlaceholder": "Produkte suchen",
-    "chooseState": "Wählen Sie den Staat",
-    "state": "Zustand"
+    "chooseState": "Bundesland wählen",
+    "state": "Bundesland"
   }
 }
