--- a/i18n/en-GB/product.json
+++ b/i18n/en-GB/product.json
@@ -1,24 +1,23 @@
 {
   "product": {
-    "addToCart": "Add to cart",
+    "addToCart": "In den Warenkorb",
     "details": "Details",
-    "amount": "Amount",
-    "description": "Description",
-    "properties": "Properties",
-    "reviews": "Reviews",
-    "content": "Content",
-    "choose": "Choose a",
-    "variantsFrom": "variants from",
+    "amount": "Menge",
+    "description": "Beschreibung",
+    "properties": "Eigenschaften",
+    "reviews": "Bewertungen",
+    "content": "Inhalt",
+    "choose": "Wähle eine",
+    "variantsFrom": "Varianten ab",
     "price": {
-      "label": "Price",
-      "to": "To",
-      "from": "From"
+      "label": "Preis",
+      "to": "Bis",
+      "from": "Ab"
     },
-
     "messages": {
-      "addedToWishlist": "{p} has been added to wishlist.",
-      "removedFromWishlist": "{p} has been removed from wishlist.",
-      "addedToCart": "{p} has been added to cart."
+      "addedToWishlist": "{p} wurde zur Wunschliste hinzugefügt.",
+      "removedFromWishlist": "{p} wurde aus der Wunschliste entfernt.",
+      "addedToCart": "{p} wurde dem Warenkorb hinzugefügt."
     }
   }
 }
