--- a/i18n/en-GB/account.json
+++ b/i18n/en-GB/account.json
@@ -9,7 +9,7 @@
     "newsletterSettingHeader": "Newsletter setting",
     "defaultBillingAddressHeader": "Default billing address",
     "defaultShippingAddressHeader": "Default shipping address",
-    "editAddress": "Edit address",
+    "editAddress": "Addresse Bearbeiten",
     "yourAddress": "Your address",
     "myPaymentsHeader": "My payments",
     "orderHistoryHeader": "Order history",
